--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,31 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+.gradient-background {
+	background: linear-gradient(299deg,#3d37ef,#ca34df,#3490df,#191b7e,#7e1970);
+	background-size: 300% 300%;
+	animation: gradient-animation 15s ease infinite;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1;
+    filter: blur(15px);
+  }
+  
+  @keyframes gradient-animation {
+	0% {
+	  background-position: 0% 50%;
+	}
+	50% {
+	  background-position: 100% 50%;
+	}
+	100% {
+	  background-position: 0% 50%;
+	}
+  }
+
 html {
 	user-select: none;
   }
@@ -22,18 +47,6 @@ html {
 .bld{
 	font-weight: bold;
 }
-
-video {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 115%;
-	height: 100%;
-	object-fit: cover;
-	z-index: -1;
-    filter: blur(20px);
-  }
-  
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
