--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2296,7 +2296,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e44c65;
+			border-color: #604ce4;
 		}
 
 	select {
@@ -2399,7 +2399,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e44c65;
+			border-color: #604ce4;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -3382,7 +3382,7 @@ input, select, textarea {
 			}
 
 			.dropotron > li.active > a, .dropotron > li.active > span {
-				color: #e44c65;
+				color: #604ce4;
 			}
 
 		.dropotron.level-0 {
@@ -3484,7 +3484,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #604ce4;
 					}
 
 					#header nav ul li > ul {
@@ -3986,9 +3986,6 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						/* background: #e44c65; */
-						/* background: #181920; */
-						/* color: rgba(255, 255, 255, 0.5); */
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
